# IcyRecomenders

./: LICENSE  README.md  pyproject.toml
icyrecomenders/: apriori.py  colaborative_filtering.py
